My-landing-page

--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href = "home.html">Home</a><br>
 <body>
     <h4>Steps to be happy.</h4>
     <p>Smile and show your teeth.</p>
+
+    <video width = "320" height = "240" controls>
+    <source src = "Snaptik.app_7450040944725871879.mp4" type = "audio/mp4">
+    </video>
+
 </body>
 </html>
