--- a/home.html
+++ b/home.html
@@ -8,12 +8,14 @@
 <h1>Hello, Welcome!!</h1>
 <p>This is Frisel G. Lagane from BSIT-2A.</p>
 <body>
-    <a href = "home.html">Home</a><br>
     <a href = "about.html">About</a><br>
     <a href = "services.html">Services</a><br>
     <a href = "pages.html">Pages</a><br>
     <a href = "blog.html">Blog</a><br>
     <a href = "contact.html">Contact</a><br>
+   
+
+</video>
 
 </body>
 </html>
