--- a/pages.html
+++ b/pages.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href = "home.html">Home</a><br>
+
+<audio src="Bruno Mars - The Lazy Song (Lyrics) [ ezmp3.cc ].mp3" controls>
+    
+</audio>
 <body>
-    <p> This is </p>
+    <p> This is my page.Thankyou!</p>
 </body>
 </html>
