--- a/services.html
+++ b/services.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <a href = "home.html">Home</a><br>
     <h3>SERVICES :</h3>
-    <p>Motors</p><br>
-    <p>Bicycle</p><br>
-    <p>Cars</p><br>
+    <p>Motors<br>
+    Bicycle<br>
+    Cars</p><br>
 </body>
 </html>
