--- a/about.html
+++ b/about.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href = "home.html">Home</a><br>
 <body>
+
     <p>I went to MONHS and graduated as HUMSS student.</p>
+    <h6>This site contains  </h6>
+ 
+ 
+  
+
 </body>
 </html>
