--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<h2>CONTACT ME AT 111-111-000</h2>
+<a href = "home.html">Home</a><br>
 <body>
+    <h2>CONTACT ME AT 111-111-000.</h2> 
+    <img src = "download (1).jpg" alt = "image" />
     
+
 </body>
 </html>
